--- a/main/index.html
+++ b/main/index.html
@@ -55,7 +55,7 @@
                 <p class="second_main1">해당사항을 선택하고</p>
                 <p class="second_main2">맞춤 서비스를 제공 받으세요</p>
                 <p class="second_sub">금융이 어려운가요? 지원정책을 놓치고 계시진 않으신가요?</p>
-                <p class="category"><a href="#" class="choice">해당사항 선택</a></p>
+                <p class="category"><a href="#" class="category_button">해당사항 선택</a></p>
             </div>
             <img src="../img/CreditCard.png" alt="신용카드">
         </div>
@@ -63,10 +63,20 @@
         <div class="third">
             <img src="../img/benefit.png" alt="혜택">
             <div class="third_text">
-                <p>받을 수 있는 혜택을 알아보세요</p>
-                <p>자신의 소득분위에 맞는 지원을 받지 못하고 계신가요?<br>
+                <p class="third_main">받을 수 있는 혜택을 알아보세요</p>
+                <p class="third_sub">자신의 소득분위에 맞는 지원을 받지 못하고 계신가요?<br>
                 어떤 지원을 받을 수 있는지 잘 모르신가요?<br>
                 자신이 받을 수 있는 혜택이 무엇인지 알아보세요</p>
+                <p class="benefit"><a href="#" class="benefit_button">혜택 찾아보기</a></p>
+            </div>
+        </div>
+
+        <div class="fourth">
+            <img src="../img/education.png" alt="교육">
+            <div class="foutch_text">
+                <p class="fourth_main">맞춤 금융 교육 자료를 제공받으세요</p>
+                <p class="foutch_sub">금융 어렵지 않으신가요? 교육 자료를 제공 받아보세요.</p>
+                <p class="education"><a href="#" class="education_button">교육 받기</a> </p>
             </div>
         </div>
     </div>
