--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./main.js" defer></script>
-    <title>금융 지원 서비스</title>
+    <title>FINALL</title>
 </head>
 <body class="gangwon-font">
     <!-- nav section -->
@@ -72,8 +72,7 @@
     </div>
     <!-- footer section -->
     <div class="footer"></div>
-    <!-- lottie&bootstrap 작동 -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <!-- bootstrap 작동 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
