--- a/main/index.html
+++ b/main/index.html
@@ -73,10 +73,19 @@
 
         <div class="fourth">
             <img src="../img/education.png" alt="교육">
-            <div class="foutch_text">
+            <div class="fourth_text">
                 <p class="fourth_main">맞춤 금융 교육 자료를 제공받으세요</p>
-                <p class="foutch_sub">금융 어렵지 않으신가요? 교육 자료를 제공 받아보세요.</p>
-                <p class="education"><a href="#" class="education_button">교육 받기</a> </p>
+                <p class="fourth_sub">금융 어렵지 않으신가요? 교육 자료를 제공 받아보세요.</p>
+                <p class="education"><a href="#" class="education_button">교육받기</a></p>
+            </div>
+        </div>
+
+        <div class="fifth">
+            <img src="../img/professor.png" alt="전문가">
+            <div class="fifth_text">
+                <p class="fifth_main">전문가와 무료 상담을 제공받으세요</p>
+                <p class="fifth_sub">나에게 맞는 혜택인지 전문가와 상담해보세요.</p>
+                <p class="professor"><a href="#" class="professor_button">상담받기</a></p>
             </div>
         </div>
     </div>
