--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./main.js" defer></script>
-    <title>FINALL</title>
+    <title>금융 지원 서비스</title>
 </head>
 <body class="gangwon-font">
     <!-- nav section -->
@@ -55,7 +55,7 @@
                 <p class="second_main1">해당사항을 선택하고</p>
                 <p class="second_main2">맞춤 서비스를 제공 받으세요</p>
                 <p class="second_sub">금융이 어려운가요? 지원정책을 놓치고 계시진 않으신가요?</p>
-                <p class="category"><a href="#" class="choice">해당사항 선택</a></p>
+                <p class="category"><a href="#" class="category_button">해당사항 선택</a></p>
             </div>
             <img src="../img/CreditCard.png" alt="신용카드">
         </div>
@@ -63,16 +63,35 @@
         <div class="third">
             <img src="../img/benefit.png" alt="혜택">
             <div class="third_text">
-                <p>받을 수 있는 혜택을 알아보세요</p>
-                <p>자신의 소득분위에 맞는 지원을 받지 못하고 계신가요?<br>
+                <p class="third_main">받을 수 있는 혜택을 알아보세요</p>
+                <p class="third_sub">자신의 소득분위에 맞는 지원을 받지 못하고 계신가요?<br>
                 어떤 지원을 받을 수 있는지 잘 모르신가요?<br>
                 자신이 받을 수 있는 혜택이 무엇인지 알아보세요</p>
+                <p class="benefit"><a href="#" class="benefit_button">혜택 찾아보기</a></p>
+            </div>
+        </div>
+
+        <div class="fourth">
+            <img src="../img/education.png" alt="교육">
+            <div class="fourth_text">
+                <p class="fourth_main">맞춤 금융 교육 자료를 제공받으세요</p>
+                <p class="fourth_sub">금융 어렵지 않으신가요? 교육 자료를 제공 받아보세요.</p>
+                <p class="education"><a href="#" class="education_button">교육받기</a></p>
+            </div>
+        </div>
+
+        <div class="fifth">
+            <img src="../img/professor.png" alt="전문가">
+            <div class="fifth_text">
+                <p class="fifth_main">전문가와 무료 상담을 제공받으세요</p>
+                <p class="fifth_sub">나에게 맞는 혜택인지 전문가와 상담해보세요.</p>
+                <p class="professor"><a href="#" class="professor_button">상담받기</a></p>
             </div>
         </div>
     </div>
     <!-- footer section -->
     <div class="footer"></div>
-    <!-- bootstrap 작동 -->
+    <!-- lottie&bootstrap 작동 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
