--- a/FirstPage/FP.html
+++ b/FirstPage/FP.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=w, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="./login.js" defer></script>
-    <link rel="stylesheet" href="login.css">
+    <script src="./FP.js" defer></script>
+    <link rel="stylesheet" href="FP.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
-    <title>맞춤 제공 서비스</title>
+    <title>FINALL</title>
 </head>
 <body>
     <div class="display-container">
@@ -25,7 +25,7 @@
                 <img class="creditcard my-5" src="../img/CreditCard.png" alt="">
             </div>
             <div class="loginBtn">
-                <a href="#">
+                <a href="../login/login.html">
                     <button>로그인 하러가기</button>
                 </a>
             </div>
