--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Consult.css">
-    <link rel="stylesheet" href="Consult.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="Consult.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
+    <script src="./Consult.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar_logo">
+            <i class="fa-solid fa-landmark"></i>
+            <a href="./index.html">FINALL</a>
+        </div>
+        <ul class="navbar_menu">
+            <li><a href="../main/index.html">메인화면</a></li>
+            <li><a href="../Education/Education.html">맞춤교육</a></li>
+            <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
+        </ul>
+        <ul class="navbar_login">
+            <li><a href="../login/login.html">로그인<i class="fa-regular fa-user"></i></a></li>
+        </ul>
+        <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+    </nav>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
