--- a/SignUp/SU.html
+++ b/SignUp/SU.html
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="SignUpBtn">
-                <a href="../SignUp/SU.html">
+                <a href="../login/login.html">
                     <button>이미 회원이신가요?</button>
                 </a>
             </div>
