--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -7,25 +7,53 @@
     <link rel="stylesheet" href="Consult.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./Consult.js" defer></script>
-    <title>Document</title>
+    <title>실시간 상담</title>
 </head>
-<body>
-    <nav class="navbar">
-        <div class="navbar_logo">
-            <i class="fa-solid fa-landmark"></i>
-            <a href="./index.html">FINALL</a>
+<body class="gangwon-font">
+    <div class="display-container">
+        <nav class="navbar">
+            <div class="navbar_logo">
+                <i class="fa-solid fa-landmark"></i>
+                <a href="./index.html">FINALL</a>
+            </div>
+            <ul class="navbar_menu">
+                <li><a href="../main/index.html">맞춤교육</a></li>
+                <li><a href="../Education/Education.html">맞춤혜택</a></li>
+                <li><a href="../Benefit/Benefit.html">실시간상담</a></li>
+            </ul>
+            <ul class="navbar_login">
+                <li><a href="../login/login.html">로그인<i class="fa-regular fa-user"></i></a></li>
+            </ul>
+            <a href="../login/login.html" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+        </nav>
+        <div class="header_section">
+            <div class="header">
+                <p>실시간 상담</p>
+                <div class="header_line"></div>
+            </div>
+            <div class="search_section">
+                <div class="search_bar">
+                    <input type="text" placeholder="키워드를 입력해주세요.">
+                </div>
+                <div class="searchBtn">
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+                <div class="categoryBtn">
+                    <a href=""><button>카테고리</button></a>
+                </div>
+                <div class="consult_img">
+                    <img src="../img/professor.png" alt="">
+                </div>
+            </div>
         </div>
-        <ul class="navbar_menu">
-            <li><a href="../main/index.html">메인화면</a></li>
-            <li><a href="../Education/Education.html">맞춤교육</a></li>
-            <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
-        </ul>
-        <ul class="navbar_login">
-            <li><a href="../login/login.html">로그인<i class="fa-regular fa-user"></i></a></li>
-        </ul>
-        <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
-    </nav>
+        <div class="option_part"></div>
+        <div class="writeBtn"></div>
+        <div class="content">
+            <div class="question">
 
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
