--- a/Education/Education.html
+++ b/Education/Education.html
@@ -1,15 +1,130 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Education.css">
-    <link rel="stylesheet" href="Education.js">
+    <!-- css&bootstrap 연결 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Education.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
-    <title>Document</title>
+    <script src="./Education.js" defer></script>
+    <title>교육 선택</title>
 </head>
-<body>
+<body class="gangwon-font">
+    <!-- nav section -->
+    <nav class="navbar">
+        <div class="navbar_logo">
+            <i class="fa-solid fa-landmark"></i>
+            <a href="./index.html">가제목</a><!-- 서비스 이름 -->
+        </div>
+        <ul class="navbar_menu">
+            <li><a href="./index.html">메인화면</a></li>
+            <li><a href="">맞춤교육</a></li>
+            <li><a href="">맞춤혜택</a></li>
+        </ul>
+        <ul class="navbar_login">
+            <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
+        </ul>
+        <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+    </nav>
+
+    <!--header-->
+    <header class="header">
+        <div class="title">맞춤 교육</div>
+        <hr/>
+        <div class="sub">
+            <form class="search_form">
+                <input class="search_education" type="text" placeholder="찾는 교육을 검색하세요">
+                <button class="submit_education" type="submit">돋보기</button>
+                <input class="category_education" type="button" value="카테고리">
+            </form>
+            <img src="../img/education.png" alt="교육 이미지">
+        </div>
+    </header>
+
+    <!--카테고리-->
+    <div class="category">
+        <ul>
+            <li>전체</li>
+        </ul>
+
+        <ul>
+            <li>청소년</li>
+            <!--
+            <li>대학생</li>
+            <li>중장년</li>
+            <li>시니어</li>
+            <li>장애인</li>
+            <li>북한이탈주민</li>
+            -->
+        </ul>
+
+        <ul>
+            <li>부채관리</li>
+            <!--
+            <li>신용관리</li>
+            <li>재무설계</li>
+            <li>소비저축</li>
+            <li>위험관리</li>
+            <li>소비생활</li>
+            -->
+        </ul>
+    </div>
+    <!--페이지네이션-->
+    <div class="page">
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동 (link 아이콘)</i></a></p>
+        </div>
+
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동</a></p>
+        </div>
+
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동</a></p>
+        </div>
+
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동</a></p>
+        </div>
+
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동</a></p>
+        </div>
+
+        <div class="section">
+            <img src="../img/text.png">
+            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+            <p>교육 시간: 6분</p>
+            <p>교육 안내: <a href="#">타 사이트 이동</a></p>
+        </div>
+
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
