--- a/Education/Education.html
+++ b/Education/Education.html
@@ -74,7 +74,7 @@
     <!--페이지네이션-->
     <div class="page">
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
@@ -106,7 +106,7 @@
         </div>
 
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
@@ -114,7 +114,7 @@
         </div>
 
         <div class="section">
-            <img src="../img/text.png">
+            <img src="../img/test.png">
             <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
             <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
             <p>교육 시간: 6분</p>
