혜택 페이지 기초 제작

--- a/Education/Education.html
+++ b/Education/Education.html
@@ -39,7 +39,7 @@
                 <button class="submit_education" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 <input class="category_education" type="button" value="카테고리">
             </form>
-            <img src="../img/education.png" alt="교육 이미지">
+            <img src="../img/ed_education.png" alt="교육 이미지">
         </div>
     </header>
 
