네브바 수정

--- a/Education/Education.html
+++ b/Education/Education.html
@@ -16,12 +16,12 @@
     <nav class="navbar">
         <div class="navbar_logo">
             <i class="fa-solid fa-landmark"></i>
-            <a href="./index.html">가제목</a><!-- 서비스 이름 -->
+            <a href="../main/index.html">FINALL</a><!-- 서비스 이름 -->
         </div>
         <ul class="navbar_menu">
-            <li><a href="./index.html">메인화면</a></li>
-            <li><a href="">맞춤교육</a></li>
-            <li><a href="">맞춤혜택</a></li>
+            <li><a href="../main/index.html">맞춤교육</a></li>
+            <li><a href="../Education/Education.html">맞춤혜택</a></li>
+            <li><a href="../Benefit/Benefit.html">실시간상담</a></li>
         </ul>
         <ul class="navbar_login">
             <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
