--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -11,10 +11,9 @@
 </head>
 <body class="gangwon-font">
     <div class="display-container">
-        <nav class="navbar">
+        <nav class="navbar fixed-top">
             <div class="navbar_logo">
-                <i class="fa-solid fa-landmark"></i>
-                <a href="./index.html">FINALL</a>
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
                 <li><a href="../main/index.html">맞춤교육</a></li>
@@ -46,7 +45,27 @@
                 </div>
             </div>
         </div>
-        <div class="option_part"></div>
+        <div class="category">
+            <section class="optional">
+                <select id="ed_target">
+                    <option>서비스 분류</option>
+                    <option value="">개인/가구</option>
+                    <option value="">소상공인</option>
+                    <option value="">법인</option>
+                </select>
+            </section>
+            <section class="optional">
+                <select id="ed_field">
+                    <option>전체</option>
+                    <option value="">부채관리</option>
+                    <option value="">신용관리</option>
+                    <option value="">재무설계</option>
+                    <option value="">소비저축</option>
+                    <option value="">위험관리</option>
+                    <option value="">소비생활</option>
+                </select>
+            </section>
+        </div>
         <div class="writeBtn"></div>
         <div class="content">
             <div class="question">
