--- a/Benefit/Benefit.html
+++ b/Benefit/Benefit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Benefit.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="Benefit.js" defer></script>
-    <title>교육 선택</title>
+    <title>혜택 선택</title>
 </head>
 <body class="gangwon-font">
     <!-- nav section -->
@@ -18,9 +18,9 @@
             <a href="../main/index.html">FINALL</a><!-- 서비스 이름 -->
         </div>
         <ul class="navbar_menu">
-            <li><a href="../main/index.html">메인화면</a></li>
-            <li><a href="">맞춤교육</a></li>
-            <li><a href="">맞춤혜택</a></li>
+            <li><a href="../Education/Education.html">맞춤교육</a></li>
+            <li><a href="./Benefit.html">맞춤혜택</a></li>
+            <li><a href="">실시간상담</a></li>
         </ul>
         <ul class="navbar_login">
             <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
@@ -30,11 +30,11 @@
 
         <!--header-->
     <header class="header">
-        <div class="title">맞춤 교육</div>
+        <div class="title">맞춤 혜택</div>
         <hr/>
         <div class="sub">
             <form class="search_form">
-                <input class="search_education" type="text" placeholder="찾는 교육을 검색하세요">
+                <input class="search_education" type="text" placeholder="찾는 혜택을 검색하세요">
                 <button class="submit_education" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 <input class="category_education" type="button" value="카테고리">
             </form>
@@ -72,45 +72,57 @@
     <!--페이지네이션-->
     <div class="page">
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
         <div class="section">
-            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-            <p>교육 시간: 6분</p>
-            <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+            <p>신청 기간: 2023년 9월 25일까지</p>
+            <p>접수 기관: 관할 지자체</p>
+            <p>지원 형태: 현금</p>
+            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
         </div>
 
     </div>
