--- a/Education/Education.html
+++ b/Education/Education.html
@@ -19,9 +19,9 @@
             <a href="../main/index.html">FINALL</a><!-- 서비스 이름 -->
         </div>
         <ul class="navbar_menu">
-            <li><a href="../main/index.html">메인화면</a></li>
-            <li><a href="">맞춤교육</a></li>
-            <li><a href="">맞춤혜택</a></li>
+            <li><a href="./Education.css">맞춤교육</a></li>
+            <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
+            <li><a href="">실시간상담</a></li>
         </ul>
         <ul class="navbar_login">
             <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
