--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -18,7 +18,7 @@
             <ul class="navbar_menu">
                 <li><a href="../main/index.html">맞춤교육</a></li>
                 <li><a href="../Education/Education.html">맞춤혜택</a></li>
-                <li><a href="../Benefit/Benefit.html">실시간상담</a></li>
+                <li><a href="../Benefit/Benefit.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="../login/login.html">로그인<i class="fa-regular fa-user"></i></a></li>
