--- a/main/index.html
+++ b/main/index.html
@@ -15,8 +15,7 @@
         <!-- nav section -->
         <nav class="navbar">
             <div class="navbar_logo">
-                <i class="fa-solid fa-landmark"></i>
-                <a href="./index.html">FINALL</a><!-- 서비스 이름 -->
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
                 <li><a href="./index.html">맞춤교육</a></li>
