로고수정&fixed top 추가

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -65,8 +65,13 @@
                     <option value="">소비생활</option>
                 </select>
             </section>
+            <div class="writeBtn">
+                <a href="">
+                    <button>글 작성하기</button>
+                </a>
+            </div>
         </div>
-        <div class="writeBtn"></div>
+        
         <div class="content">
             <div class="question">
 
