--- a/FirstPage/FP.html
+++ b/FirstPage/FP.html
@@ -13,7 +13,7 @@
     <div class="display-container">
         <div class="headerpart">
             <div class="login_header">
-                <p>FINALL</p>
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <div class="login_subheader">
                 <p>
