--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -71,10 +71,14 @@
                 </a>
             </div>
         </div>
-        
-        <div class="content">
-            <div class="question">
-
+        <!-- consult list -->
+        <div class="consult_list">
+            <div class="question_box">
+                <a href="">
+                    <div class="question_header">제목</div>
+                    <div class="question_content">내용</div>
+                    <div class="question_answer">답변</div>
+                </a>
             </div>
         </div>
     </div>
