로그인페이지 삭제후 firstpage와 통합, SignUP페이지도 수정

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -11,7 +11,7 @@
 </head>
 <body class="gangwon-font">
     <div class="display-container">
-        <nav class="navbar fixed-top">
+        <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
             <div class="navbar_logo">
                 <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
@@ -21,9 +21,9 @@
                 <li><a href="../Benefit/Benefit.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
-                <li><a href="../login/login.html">로그인<i class="fa-regular fa-user"></i></a></li>
+                <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
             </ul>
-            <a href="../login/login.html" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+            <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
         <div class="header_section">
             <div class="header">
@@ -73,11 +73,26 @@
         </div>
         <!-- consult list -->
         <div class="consult_list">
-            <div class="question_box">
-                <a href="">
-                    <div class="question_header">제목</div>
-                    <div class="question_content">내용</div>
-                    <div class="question_answer">답변</div>
+            <div>
+                <a href="#">
+                    <div class="question_box">
+                        <div class="header">제목</div>
+                        <div class="content">내용</div>
+                        <div class="line"></div>
+                        <div class="answer">답변</div>
+                        <div class="line"></div>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="#">
+                    <div class="question_box">
+                        <div class="header">제목</div>
+                        <div class="content">내용</div>
+                        <div class="line"></div>
+                        <div class="answer">답변</div>
+                        <div class="line"></div>
+                    </div>
                 </a>
             </div>
         </div>
