--- a/SignUp/SU.html
+++ b/SignUp/SU.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="SU.css">
-    <link rel="stylesheet" href="SU.js">
+    <meta name="viewport" content="width=w, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="./SU.js" defer></script>
+    <link rel="stylesheet" href="SU.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
-    <title>FINALL SIGNUP</title>
+    <title>FINALL SignUp</title>
 </head>
 <body>
     <div class="display-container">
         <div class="headerpart">
             <div class="login_header">
-                <p>회원가입을 진행해주세요 !</p>
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
+            </div>
+            <div class="login_subheader">
+                <p>
+                    당신이 원하는 맞춤 금융 교육과 <br />
+                    정책, 혜택, 지원 방법을 알아보세요.
+                </p>
             </div>
             <div class="login_tool">
                 <div class="login_border">
@@ -87,12 +93,18 @@
                 </div>
             </div>
             <div class="SignUpBtn">
-                <a href="../login/login.html">
+                <a href="../FirstPage/FP.html">
                     <button>이미 회원이신가요?</button>
+                </a>
+            </div>
+            <div class="notmemberBtn">
+                <a href="../main/index.html">
+                    <button>비회원으로 진행하기</button>
                 </a>
             </div>
         </div>
     </div>
+    <!-- 부트스트랩 작동 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
