--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -7,9 +7,77 @@
     <link rel="stylesheet" href="MP.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./MP.js" defer></script>
-    <title>Document</title>
+    <title>마이페이지</title>
 </head>
-<body>
+<body class="gangwon-font">
+    <div class="display-container">
+        <!-- nav section -->
+        <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
+            <div class="navbar_logo">
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
+            </div>
+            <ul class="navbar_menu">
+                <li><a href="../main/index.html">맞춤교육</a></li>
+                <li><a href="../Education/Education.html">맞춤혜택</a></li>
+                <li><a href="../Benefit/Benefit.html">맞춤상담</a></li>
+            </ul>
+            <ul class="navbar_login">
+                <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
+            </ul>
+            <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+        </nav>
+        <!-- header section -->
+        <div class="header_section">
+            <div class="header">
+                <p class="topheader">마이페이지</p>
+                <br />
+                <p class="subheader">정보를 수정하세요.</p>
+            </div>
+            <div class="MP_img">
+                <img src="../img/protect.png" alt="">
+            </div>
+        </div>
+        <!-- content section -->
+        <div class="content_section">
+            <div class="inform d-flex justify-content-center">
+                <p>개인 정보 </p>  
+            </div>
+            <div class="line"></div>
+            <div class="correct">
+                <div class="correct_email d-flex justify-content-center">
+                    <p>이메일</p>
+                    <input type="text" value="">
+                </div>
+            </div>
+            <div class="correct">
+                <div class="correct_name d-flex justify-content-center">
+                    <p>이름</p>
+                    <input type="text" value="">
+                </div>
+            </div>
+            <div class="newinform d-flex justify-content-center">
+                <p>비밀번호 변경</p>
+            </div>
+            <div class="line"></div>
+            <div class="correct">
+                <div class="correct_newpw d-flex justify-content-center">
+                    <p>새 비밀번호 입력</p>
+                    <input type="password" placeholder="새로운 비밀번호를 입력해주세요.">
+                </div>
+            </div>
+            <div class="correct"></div>
+                <div class="correct_newpwcheck d-flex justify-content-center">
+                    <p>새 비밀번호 재확인</p>
+                    <input type="password" placeholder="변경된 비밀번호를 입력해주세요.">
+                </div>
+            </div>
+            <div class="changeBtn d-flex justify-content-center">
+                <button>변경하기</button>
+            </div>
+        </div>
+        <div class="myquestion"></div>
+        <div class="myanswer"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
