--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -75,8 +75,21 @@
                 <button>변경하기</button>
             </div>
         </div>
-        <div class="myquestion"></div>
-        <div class="myanswer"></div>
+        <!-- tap section -->
+        <div class="tap_section">
+            <div class="tab">
+                <button class="tablinks" onclick="openCity(event, '내 질문')">내 질문</button>
+                <button class="tablinks" onclick="openCity(event, '내 답변')">내 답변</button>
+            </div>
+            <div id="내 질문" class="tabcontent">
+                <h3>제목</h3>
+                <p>내용</p>
+            </div>
+            <div id="내 답변" class="tabcontent">
+                <h3>제목</h3>
+                <p>내용</p> 
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
