--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -82,12 +82,16 @@
                 <button class="tablinks" onclick="openCity(event, '내 답변')">내 답변</button>
             </div>
             <div id="내 질문" class="tabcontent">
-                <h3>제목</h3>
-                <p>내용</p>
+                <div class="tablist d-flex">
+                    <p class="inheader">제목asdfasdfsadffasdffdsfasdfs</p>
+                    <p class="incontent">내용</p>
+                </div>x
             </div>
             <div id="내 답변" class="tabcontent">
-                <h3>제목</h3>
-                <p>내용</p> 
+                <div class="tablist d-flex">
+                    <p class="inheader">제목</p>
+                    <p class="incontent">내용</p>
+                </div> 
             </div>
         </div>
     </div>
