전체적으로 수정

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Consult.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./Consult.js" defer></script>
-    <title>실시간 상담</title>
+    <title>맞춤상담 - FINALL</title>
 </head>
 <body class="gangwon-font">
     <div class="display-container">
@@ -36,9 +36,6 @@
                 </div>
                 <div class="searchBtn">
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
-                </div>
-                <div class="categoryBtn">
-                    <a href=""><button>카테고리</button></a>
                 </div>
                 <div class="consult_img">
                     <img src="../img/professor.png" alt="">
