--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="MP.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="./MP.js" defer></script>
-    <title>마이페이지</title>
+    <title>마이페이지 - FINALL</title>
 </head>
 <body class="gangwon-font">
     <div class="display-container">
@@ -83,9 +83,9 @@
             </div>
             <div id="내 질문" class="tabcontent">
                 <div class="tablist d-flex">
-                    <p class="inheader">제목asdfasdfsadffasdffdsfasdfs</p>
+                    <p class="inheader">제목</p>
                     <p class="incontent">내용</p>
-                </div>x
+                </div>
             </div>
             <div id="내 답변" class="tabcontent">
                 <div class="tablist d-flex">
