--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -17,9 +17,9 @@
                 <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
-                <li><a href="../main/index.html">맞춤교육</a></li>
-                <li><a href="../Education/Education.html">맞춤혜택</a></li>
-                <li><a href="../Benefit/Benefit.html">맞춤상담</a></li>
+                <li><a href="../Education/Education.html">맞춤교육</a></li>
+                <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
+                <li><a href="../Consult/Consult.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
                 <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
@@ -82,16 +82,20 @@
                 <button class="tablinks" onclick="openCity(event, '내 답변')">내 답변</button>
             </div>
             <div id="내 질문" class="tabcontent">
-                <div class="tablist d-flex">
-                    <p class="inheader">제목</p>
-                    <p class="incontent">내용</p>
-                </div>
+                <a href="#">
+                    <div class="tablist d-flex">
+                        <p class="inheader">내용</p>
+                        <p class="incontent">답변</p>
+                    </div>
+                </a>
             </div>
             <div id="내 답변" class="tabcontent">
-                <div class="tablist d-flex">
-                    <p class="inheader">제목</p>
-                    <p class="incontent">내용</p>
-                </div> 
+                <a href="#">
+                    <div class="tablist d-flex">
+                        <p class="inheader">내용</p>
+                        <p class="incontent">답변</p>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
