--- a/main/index.html
+++ b/main/index.html
@@ -18,8 +18,8 @@
                 <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <ul class="navbar_menu">
-                <li><a href="./index.html">맞춤교육</a></li>
-                <li><a href="../Benefit/">맞춤혜택</a></li>
+                <li><a href="../Education/Education.html">맞춤교육</a></li>
+                <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
                 <li><a href="../Consult/Consult.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
