--- a/Benefit/Benefit.html
+++ b/Benefit/Benefit.html
@@ -8,26 +8,25 @@
     <link rel="stylesheet" href="Benefit.css">
     <script src="https://kit.fontawesome.com/855cb859ed.js" crossorigin="anonymous"></script><!-- font awesome 연결링크 -->
     <script src="Benefit.js" defer></script>
-    <title>혜택 선택</title>
+    <title>혜택 선택 - FINALL</title>
 </head>
 <body class="gangwon-font">
-    <!-- nav section -->
-    <nav class="navbar">
+    <div class="display-container">
+        <!-- nav section -->
+    <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
         <div class="navbar_logo">
-            <i class="fa-solid fa-landmark"></i>
-            <a href="../main/index.html">FINALL</a><!-- 서비스 이름 -->
+            <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
         </div>
         <ul class="navbar_menu">
             <li><a href="../Education/Education.html">맞춤교육</a></li>
-            <li><a href="./Benefit.html">맞춤혜택</a></li>
-            <li><a href="">실시간상담</a></li>
+            <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
+            <li><a href="../Consult/Consult.html">맞춤상담</a></li>
         </ul>
         <ul class="navbar_login">
-            <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
+            <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
         </ul>
         <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
     </nav>
-
         <!--header-->
     <header class="header">
         <div class="title">맞춤 혜택</div>
@@ -126,7 +125,7 @@
         </div>
 
     </div>
-
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
