로그인 페이지 수정

--- a/FirstPage/FP.html
+++ b/FirstPage/FP.html
@@ -13,7 +13,7 @@
     <div class="display-container">
         <div class="headerpart">
             <div class="login_header">
-                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
+                <a href="../main/index.html"><img class="logo"src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <div class="login_subheader">
                 <p>
@@ -92,18 +92,23 @@
                             </a>       
                         </div>
                     </div>
+
+                    <div class="signBtn">
+                        <p><a href="../SignUp/SU.html">회원가입 하러가기</a></p>
+                        <p><a href="../main/index.html">비회원으로 진행하기</a></p>
+                    </div>
                 </div>
             </div>
+
+
             <div class="SignUpBtn">
-                <a href="../SignUp/SU.html">
-                    <button>회원가입 하러가기</button>
-                </a>
+                    <button><a href="../SignUp/SU.html">회원가입 하러가기</a></button>
             </div>
             <div class="notmemberBtn">
-                <a href="../main/index.html">
-                    <button>비회원으로 진행하기</button>
-                </a>
+                    <button><a href="../main/index.html">비회원으로 진행하기</a></button>
             </div>
+
+            
         </div>
     </div>
     <!-- 부트스트랩 작동 -->
