--- a/SignUp/SU.html
+++ b/SignUp/SU.html
@@ -13,7 +13,7 @@
     <div class="display-container">
         <div class="headerpart">
             <div class="login_header">
-                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
+                <a href="../main/index.html"><img class="logo" src="../img/logo.png" alt="브랜드로고"></a>
             </div>
             <div class="login_subheader">
                 <p>
@@ -39,7 +39,7 @@
                         <input type="password" class="password" placeholder="비밀번호를 입력해주세요." pattern=".{8,25}" title="8자 이상 입력하시오.(최대 25자)">
                     </div>
                     <div class="tool_pwcheck">
-                        <input type="pwcheck" class="pwcheck" placeholder="비밀번호를 확인해주세요." pattern=".{8,25}">
+                        <input type="password" class="pwcheck" placeholder="비밀번호를 확인해주세요." pattern=".{8,25}">
                     </div>
                     <div class="tool_loginBtn">
                         <a href="#">
@@ -90,17 +90,18 @@
                             </a>       
                         </div>
                     </div>
+                    
+                    <div class="signBtn">
+                        <p><a href="../FirstPage/FP.html">회원가입 하러가기</a></p>
+                        <p><a href="../main/index.html">비회원으로 진행하기</a></p>
+                    </div>
                 </div>
             </div>
             <div class="SignUpBtn">
-                <a href="../FirstPage/FP.html">
-                    <button>이미 회원이신가요?</button>
-                </a>
+                <button><a href="../FirstPage/FP.html">이미 회원이신가요?</a></button>
             </div>
             <div class="notmemberBtn">
-                <a href="../main/index.html">
-                    <button>비회원으로 진행하기</button>
-                </a>
+                <button><a href="../main/index.html">비회원으로 진행하기</a></button>
             </div>
         </div>
     </div>
