교육페이지 수정

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -25,6 +25,7 @@
             </ul>
             <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
+        <!-- header section -->
         <div class="header_section">
             <div class="header">
                 <p>맞춤상담</p>
@@ -42,6 +43,7 @@
                 </div>
             </div>
         </div>
+        <!-- category section -->
         <div class="category">
             <section class="optional">
                 <select id="ed_target">
