--- a/main/index.html
+++ b/main/index.html
@@ -23,11 +23,10 @@
                 <li><a href="../Consult/Consult.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
-                <li><a href="">로그인<i class="fa-regular fa-user"></i></a></li>
+                <li><a href="../MyPage/MP.html">로그인<i class="fa-regular fa-user"></i></a></li>
             </ul>
             <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
-
         <!-- main section-->
         <div class="main">
             <div class="first">
@@ -70,7 +69,6 @@
                     <p class="benefit"><a href="../Benefit/Benefit.html" class="benefit_button">혜택 찾아보기</a></p>
                 </div>
             </div>
-
             <div class="fourth">
                 <img src="../img/education.png" alt="교육">
                 <div class="fourth_text">
@@ -79,7 +77,6 @@
                     <a href="../Education/Education.html" class="education_button"><p class="education">교육받기</a></p>
                 </div>
             </div>
-
             <div class="fifth">
                 <img src="../img/professor.png" alt="전문가">
                 <div class="fifth_text">
