--- a/Education/Education.html
+++ b/Education/Education.html
@@ -29,25 +29,29 @@
             <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
         <!--header-->
-        <header class="header">
-            <div class="title">맞춤 교육</div>
-            <hr/>
-            <div class="sub">
-                <form class="search_form">
-                    <input class="search_education" type="text" placeholder="찾는 교육을 검색하세요">
-                    <button class="submit_education" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                    <input class="category_education" type="button" value="카테고리">
-                </form>
-                <img src="../img/ed_education.png" alt="교육 이미지">
+        <div class="header_section">
+            <div class="header">
+                <p>맞춤교육</p>
+                <div class="header_line"></div>
             </div>
-        </header>
-
+            <div class="search_section">
+                <div class="search_bar">
+                    <input type="text" placeholder="키워드를 입력해주세요.">
+                </div>
+                <div class="searchBtn">
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+                <div class="consult_img">
+                    <img src="../img/ed_education.png" alt="">
+                </div>
+            </div>
+        </div>
         <!--카테고리-->
         <div class="category">
             <section class="optional">
                 <select id="ed_target">
-                    <option>청소년</option>
-                    <option value="">전체</option>
+                    <option>서비스 분류</option>
+                    <option value="">청소년</option>
                     <option value="">대학생</option>
                     <option value="">중장년</option>
                     <option value="">시니어</option>
@@ -55,11 +59,10 @@
                     <option value="">북한이탈주민</option>
                 </select>
             </section>
-
             <section class="optional">
                 <select id="ed_field">
-                    <option>부채관리</option>
-                    <option value="">전체</option>
+                    <option>전체</option>
+                    <option value="">부채관리</option>
                     <option value="">신용관리</option>
                     <option value="">재무설계</option>
                     <option value="">소비저축</option>
@@ -69,48 +72,80 @@
             </section>
         </div>
         <!--페이지네이션-->
-        <div class="page">
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+        <div class="page_section">
+            <div class="page_line1">
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div>
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div>
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div>
             </div>
-
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <div class="page_line2">
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div>
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div>
+                <div class="page_box">
+                    <div class="box_video">
+                        <video src=""></video>
+                    </div>
+                    <div class="box_content">
+                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                        <p>교육 시간: 6분</p>
+                    </div>
+                </div> 
             </div>
-
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
-            <div class="section">
-                <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                <p>교육 시간: 6분</p>
-                <p>교육 안내: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
+            <div class="pagination">
+                <a href="#">&laquo;</a>
+                <a href="#">1</a>
+                <a class="active" href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">&raquo;</a>
+              </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
