페이지네이션 수정

--- a/Education/Education.html
+++ b/Education/Education.html
@@ -137,14 +137,14 @@
                     </div>
                 </div> 
             </div>
-            <div class="pagination">
-                <a href="#">&laquo;</a>
-                <a href="#">1</a>
-                <a class="active" href="#">2</a>
+            <div class="pagination d-flex justify-content-center">
+                <a class="cramps" href="#"> << </a>
+                <a class="active" href="#">1</a>
+                <a href="#">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
-                <a href="#">&raquo;</a>
+                <a class="cramps" href="#"> >> </a>
               </div>
         </div>
     </div>
