자잘한 수정

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -31,6 +31,10 @@
                 <p>맞춤상담</p>
                 <div class="header_line"></div>
             </div>
+            <div class="subheader d-flex justify-content-center">
+                <p class="blue">내 상황에 맞는 상담</p><p>이 궁금하다면?</p>
+            </div>
+            <div class="subheader_line"><div class="line"></div></div>
             <div class="search_section">
                 <div class="search_bar">
                     <input type="text" placeholder="키워드를 입력해주세요.">
@@ -38,7 +42,7 @@
                 <div class="searchBtn">
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
-                <div class="consult_img">
+                <div class="header_img">
                     <img src="../img/professor.png" alt="">
                 </div>
             </div>
