--- a/Education/Education.html
+++ b/Education/Education.html
@@ -44,7 +44,7 @@
                 <div class="searchBtn">
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
-                <div class="consult_img">
+                <div class="header_img">
                     <img src="../img/ed_education.png" alt="">
                 </div>
             </div>
