마이페이지 완성

--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -21,7 +21,7 @@
                 <li><a href="../Consult/Consult.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
-                <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
+                <li><a href="../MyPage/MP.html">로그인<i class="fa-regular fa-user"></i></a></li>
             </ul>
             <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
@@ -98,6 +98,17 @@
                     </div>
                 </a>
             </div>
+        </div>
+        <div class="pagination d-flex justify-content-center">
+            <a class="cramps" href="#"> << </a>
+            <a class="cramps" href="#"> < </a>
+            <a class="active" href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a class="cramps" href="#"> > </a>
+            <a class="cramps" href="#"> >> </a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
