--- a/MyPage/MP.html
+++ b/MyPage/MP.html
@@ -22,7 +22,7 @@
                 <li><a href="../Consult/Consult.html">맞춤상담</a></li>
             </ul>
             <ul class="navbar_login">
-                <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
+                <li><a href="../MyPage/MP.html">로그인<i class="fa-regular fa-user"></i></a></li>
             </ul>
             <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
         </nav>
@@ -83,6 +83,10 @@
             </div>
             <div id="내 질문" class="tabcontent">
                 <a href="#">
+                    <div class="tablist d-flex">
+                        <p class="inheader">내용</p>
+                        <p class="incontent">답변</p>
+                    </div>
                     <div class="tablist d-flex">
                         <p class="inheader">내용</p>
                         <p class="incontent">답변</p>
