상담자세히보기페이지 완성

--- a/Consult/Consult_Content/CC.html
+++ b/Consult/Consult_Content/CC.html
@@ -46,15 +46,13 @@
                 <br>
             </div>
             <div class="line"></div>
-            <div class="moveQuestion d-flex justify-content-between">
-                <div class="lastquestion">
-                    <button class="d-flex">
-                        <i class="fa-solid fa-arrow-left-long" style="color: #9d9d9d;"></i><p>이전 질문</p></div>
-                    </button>
-                <div class="nextquestion">
-                    <button class="d-flex">
-                        <p>다음 질문</p><i class="fa-solid fa-arrow-right-long" style="color: #9d9d9d;"></i>
-                    </button>
+            <!-- answer write section -->
+            <div class="answer_write_tool">
+                <div class="writeBtn"><button>답변 작성</button></div>
+                <div class="tool_write">
+                    <form action="#">
+                        <fieldset><textarea name="글작성" id="#" cols="70" rows="3" placeholder="답변을 입력해주세요."></textarea></fieldset>
+                    </form>
                 </div>
             </div>
             <!-- answer section -->
