--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -69,7 +69,7 @@
                 </select>
             </section>
             <div class="writeBtn">
-                <a href="">
+                <a href="./Consult_Write/CW.html">
                     <button>글 작성하기</button>
                 </a>
             </div>
