로그인이랑 회원가입 페이지 미디어쿼리 수정해야함

--- a/SignUp/SU.html
+++ b/SignUp/SU.html
@@ -12,17 +12,30 @@
 <body>
     <div class="display-container">
         <div class="headerpart">
-            <div class="login_header">
-                <a href="../main/index.html"><img class="logo" src="../img/logo.png" alt="브랜드로고"></a>
-            </div>
-            <div class="login_subheader">
-                <p>
-                    당신이 원하는 맞춤 금융 교육과 <br />
-                    정책, 혜택, 지원 방법을 알아보세요.
-                </p>
+            <div class="header_section">
+                <div class="login_header">
+                    <a href="../main/index.html"><img class="logo" src="../img/logo.png" alt="브랜드로고"></a>
+                </div>
+                <div class="login_subheader">
+                    <p>
+                        당신이 원하는 맞춤 금융 교육과 <br />
+                        정책, 혜택, 지원 방법을 알아보세요.
+                    </p>
+                </div>
+                <div class="Btn_section">
+                    <div class="SignUpBtn">
+                        <a href="../SignUp/SU.html"><button class="SUBtn">회원가입 하러가기</button></a>
+                    </div>
+                    <div class="notmemberBtn">
+                        <a href="../main/index.html"><button class="NMBtn">비회원으로 진행하기</button></a>
+                    </div>
+                </div>
             </div>
             <div class="login_tool">
                 <div class="login_border">
+                    <div class="tool_logo">
+                        <img src="../img/tool_logo.png" alt="">
+                    </div>
                     <div class="tool_header">
                         <p>Sign Up</p>
                     </div>
@@ -92,16 +105,10 @@
                     </div>
                     
                     <div class="signBtn">
-                        <p><a href="../FirstPage/FP.html">회원가입 하러가기</a></p>
-                        <p><a href="../main/index.html">비회원으로 진행하기</a></p>
+                        <div><p><a href="../FirstPage/FP.html">로그인 하러가기</a></p></div>
+                        <div><p><a href="../main/index.html">비회원으로 진행하기</a></p></div>
                     </div>
                 </div>
-            </div>
-            <div class="SignUpBtn">
-                <button><a href="../FirstPage/FP.html">이미 회원이신가요?</a></button>
-            </div>
-            <div class="notmemberBtn">
-                <button><a href="../main/index.html">비회원으로 진행하기</a></button>
             </div>
         </div>
     </div>
