--- a/SignUp/SU.html
+++ b/SignUp/SU.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="Btn_section">
                     <div class="SignUpBtn">
-                        <a href="../SignUp/SU.html"><button class="SUBtn">회원가입 하러가기</button></a>
+                        <a href="../FirstPage/FP.html"><button class="SUBtn">로그인 하러가기</button></a>
                     </div>
                     <div class="notmemberBtn">
                         <a href="../main/index.html"><button class="NMBtn">비회원으로 진행하기</button></a>
